[gd_scene load_steps=3 format=3 uid="uid://dupot7pwyio7x"]

[ext_resource type="Script" uid="uid://cs65nhppphjfe" path="res://Scenes/main_menu.gd" id="1_28flt"]
[ext_resource type="Texture2D" uid="uid://dlru68e8llc4" path="res://Assets/Game_vn/main_menu/main_menu.jpg" id="2_48xlc"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_28flt")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_left = -7.0
offset_top = -217.0
offset_right = 1154.0
offset_bottom = 944.0
texture = ExtResource("2_48xlc")

[node name="title" type="Label" parent="."]
layout_mode = 0
offset_left = 309.0
offset_top = 73.0
offset_right = 837.0
offset_bottom = 128.0
theme_override_font_sizes/font_size = 40
text = "PROJECT: FALLEN REPUBLIC"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 430.0
offset_top = 296.0
offset_right = 512.0
offset_bottom = 362.0
scale = Vector2(2.92809, 2.92809)

[node name="startBtn" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "CAMPAIN"

[node name="quitBtn" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "QUIT"

[node name="Button" type="Button" parent="."]
layout_mode = 0
offset_left = 1037.0
offset_top = 595.0
offset_right = 1132.0
offset_bottom = 626.0
scale = Vector2(0.589667, 0.416459)
pivot_offset = Vector2(52, 17)
text = "debug map"

[connection signal="pressed" from="VBoxContainer/startBtn" to="." method="_on_start_btn_pressed"]
[connection signal="pressed" from="VBoxContainer/quitBtn" to="." method="_on_quit_btn_pressed"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
